CMA-8762 Fixed slight shifting of label

--- a/scss/_mdl_form.scss
+++ b/scss/_mdl_form.scss
@@ -76,11 +76,13 @@
   }
 
   .mdl-float-label {
+  		position: absolute;
   		top: rem-calc(8);
   		font-size: rem-calc(12);
   		color: #3f51b5;
   		display: block;
-  	}
+  		left: rem-calc(8);
+  	}	
 }
 
 .mdl {
@@ -274,6 +276,10 @@
 		right: 0;
 		text-align: right;
 		@include transition-duration(0s);
+	}
+
+	.mdl-prefix-label.mdl-float-label {
+		left: 0;
 	}
 }
 
